--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -16,12 +16,14 @@
     "128": "assets/icon128.png"
   },
   "background": {
-    "page": "",
+    "page": "views/background.html",
     "persistent": false
   },
   "options_ui": {
-    "page": ""
+    "page": "views/options.html"
   },
-  "permissions": [],
-  "content_security_policy": ""
+  "permissions": [
+    "background"
+  ],
+  "content_security_policy": "script-src 'self' http://localhost:8080 https://localhost:* 'unsafe-eval'; style-src https://localhost:8080 http://localhost:* 'unsafe-inline'; object-src 'self'"
 }
