--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -33,8 +33,11 @@
     "page": "views/options.html"
   },
   "permissions": [
+    "activeTab",
+    "background",
     "contextMenus",
-    "background"
+    "system.display",
+    "tabs"
   ],
   "content_security_policy": "script-src 'self' http://localhost:8080 https://localhost:* 'unsafe-eval'; style-src https://localhost:8080 http://localhost:* 'unsafe-inline'; object-src 'self'"
 }
