--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "nodemon": "^2.0.4",
+    "remote-redux-devtools": "^0.5.16",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
