--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "^26.4.2",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
+    "node-forge": "^0.10.0",
     "nodemon": "^2.0.4",
     "react-chrome-extension-router": "^1.1.0",
     "redux-devtools-extension": "^2.13.8",
